[package]
name = "lsjson"
version = "0.1.0"
authors = ["tukeJonny <ne250143@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lsjson"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.31.2"
serde_json = "1.0"
